--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,9 @@ ol,ul{
     list-style: none;
     padding: 0;
 }
-
+a:active{
+    color: #5D5FEF;
+}
 hr{
     border-bottom: 1px solid rgb(126, 126, 126);
     width: 90%;
