--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,9 @@ border-radius: 50%;
     .data img{
         width: 100%;
     }
+    .data .card-body{
+        padding-top: 10px;
+    }
     .profile-img img{
         width: 35%;
     }
